<resources>
    <string name="app_name">Simple CRUD</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="message">Message</string>
    <string name="series_id">Series id</string>
    <string name="series_name">Series Name</string>
    <string name="image_url">Image url</string>
    <string name="movie_id">Movie id</string>
    <string name="movie_name">Movie Name</string>
    <string name="series">Series</string>
    <string name="description">Description</string>
</resources>