<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="movie"
            type="com.improve10x.crud.movies.Movie" />
    </data>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".movies.BaseAddEditMovieActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/movie_id"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/movie_id_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingTop="8dp"
        android:text="@{movie.movieId}"/>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/movie_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/movie_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingTop="8dp"
        android:text="@{movie.movieName}"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/series"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/series_sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/image_url"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/movie_imageurl_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingTop="8dp"
        android:text="@{movie.imageUrl}"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/description"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/description_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingTop="8dp"
        android:text="@{movie.description}"/>

</LinearLayout>
</layout>