<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="seriesItem"
            type="com.improve10x.crud.series.SeriesItem" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="4dp"
        tools:context=".series.BaseAddEditSeriesItemsActivity">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/series_id"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/seriesid_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="8dp"
            android:text="@{seriesItem.seriesId}" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/series_name"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/seriesname_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:paddingTop="8dp"
            android:text="@{seriesItem.title}" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/image_url"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/imageurl_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingTop="8dp"
            android:text="@{seriesItem.imageUrl}"/>
    </LinearLayout>
</layout>